# fost-base

./: .travis.CMakeLists.txt  .travis.yml  CMakeLists.txt  ChangeLog  Jamroot  README.md  README.txt  README.ubuntu.txt  compile  compile.cmd  fost.jam  readme.txt  smoke_test.cmake  stress_test.cmake
.circleci/: CMakeLists.txt  config.yml
Cpp/: CMakeLists.txt  debug-name-tag.jam  fost4.sln
Cpp/fost-cache/: Jamfile  cache.cpp  fost-cache.hpp
Cpp/fost-cache-test/: Jamfile  cache-construction.cpp  fost-cache-test.hpp
Cpp/fost-cli/: CMakeLists.txt  Jamfile  arguments-tests.cpp  arguments.cpp  fost-cli.hpp  fost-cli.vcproj  inifile.cpp  logger-stdio.cpp  main.cpp  main_exec.cpp  progress-bar-tests.cpp  progress-bar.cpp
Cpp/fost-core/: CMakeLists.txt  Jamfile  atexit.cpp  base16.cpp  base16.tests.cpp  base32.cpp  base32.tests.cpp  boost-filesystem-path-tests.cpp  boost-filesystem-wpath-tests.cpp  char-encoding-tests.cpp  coerce-linux.cpp  coerce-win.cpp  coerce.cpp  coercion-char-array-to-fostlib-string-fail.cpp  coercion-int-tests.cpp  coercion-tests.cpp  coercion-wchar_t-array-to-fostlib-string-fail.cpp  counter.cpp  date-tests.cpp  date.cpp  dynlib-linux.cpp  dynlib-win.cpp  dynlib.cpp  exception-linux.cpp  exception-tests.cpp  exception-win.cpp  exception.cpp  file-tests.cpp  file.cpp  filesystem-path.tests.cpp  fost-core-test.hpp  fost-core.hpp  fost-core.vcproj  hex-tests.cpp  jcursor-tests.cpp  jcursor.cpp  json-array-basic-tests.cpp  json-atom-basic-tests.cpp  json-coerce-tests.cpp  json-coerce.cpp  (+59 more)
Cpp/fost-core-test/: CMakeLists.txt  Jamfile  char-encoding.cpp  coercion.cpp  dynlib.cpp  file-io.cpp  fost-core-test.hpp  fost-core-test.vcproj  hex.cpp  json.array.basic.cpp  json.atom.basic.cpp  json.iterator.cpp  json.jcursor.cpp  json.jpath.cpp  json.object.basic.cpp  json.parse.cpp  json.to.cpp  memoize.cpp  settings.cpp  string.cpp  tagged.string.cpp  thread.cpp  variant.basic.cpp  workerpool.cpp
Cpp/fost-crypto/: CMakeLists.txt  Jamfile  crypto-tests.cpp  crypto.cpp  digest.cpp  digester.cpp  digests-tests.cpp  ed25519.cpp  ed25519.tests.cpp  fost-crypto-test.hpp  fost-crypto.hpp  hashes.cpp  hashes.tests.cpp  jwt.cpp  jwt.tests.cpp  naclite.h  nonce.cpp  password.cpp  password.tests.cpp  rsa.cpp  rsa.tests.cpp  signature.cpp  tweetnacl.cpp
Cpp/fost-crypto-test/: Jamfile  crypto.cpp  digests.cpp  fost-crypto-test.hpp
Cpp/fost-datetime/: CMakeLists.txt  Jamfile  date.cpp  datetime-strings.cpp  fost-datetime.hpp  period-tests.cpp  time_period.tests.cpp  timer.cpp  timestamp.cpp
Cpp/fost-datetime-test/: Jamfile  dates.cpp  timestamps.cpp
Cpp/fost-ftest/: FTest.rc  Jamfile  fost-ftest.vcproj  ftest.cpp  main.cpp  resource.h
Cpp/fost-inet/: Jamfile  asio.cpp  fost-inet.hpp  headers.cpp  host.cpp  http.server.cpp  http.useragent.cpp  mime.cpp  smtp.cpp  url.cpp
Cpp/fost-inet-test/: Jamfile  fost-inet-test.hpp  host.cpp  mime.cpp  smtp.cpp  url.cpp
Cpp/fost-jsondb/: Jamfile  blobdb.cpp  fost-jsondb.hpp  jsondb.cpp
Cpp/fost-jsondb-test/: Jamfile  blobdb.cpp  filetest.cpp  fost-jsondb-test.hpp
Cpp/fost-schema/: Jamfile  db.cpp  exception.cpp  field.cpp  fost-schema.hpp  jsondb.cpp  models.attribute.cpp  models.cpp  models.static.cpp
Cpp/fost-schema-test/: Jamfile  database.cpp  fields.cpp  first-test.json  fost-schema-test.hpp  jsondb-file.cpp  jsondb-file.json  models.attributes.cpp  models.basic.cpp  models.hierarchy.cpp  persistence.cpp  simple.cpp
Cpp/fost-schema-test/jsondb-file/: master.json
Cpp/fost-sinks/: CMakeLists.txt  Jamfile  linelogger.cpp  panoptes.cpp  panoptes.pathname.cpp  panoptes.pathname.tests.cpp  sinks.cpp
Cpp/fost-test/: CMakeLists.txt  Jamfile  boost-build-unit-test.cpp  fost-test.hpp  fost-test.vcproj  test-main.cpp  testsuite.cpp
Cpp/ftest/: CMakeLists.txt
Cpp/include/: db.hpp
Cpp/include/fost/: accessors.hpp  arguments.hpp  array  atexit  atexit.hpp  base16  base16.hpp  base32  base32.hpp  base64.hpp  cache  cache.hpp  cli  coerce.hpp  config.hpp  config.msvc.hpp  core  counter  counter.hpp  crypto  crypto.hpp  date  date.hpp  datetime  db  db-driver  db-driver.hpp  db.hpp  dynlib  dynlib.hpp  ed25519.hpp  exception.hpp  exceptions-fwd.hpp  file  file.hpp  filesystem.hpp  functor.hpp  host.hpp  inet  inifile.hpp  (+65 more)
Cpp/minit/: CMakeLists.txt  minit.c
Docs/: Jamfile  fost-base.hpp  fostlib.hpp  index.hpp  index.mw  modules.hpp
Docs/fost-core/: accessors.cpp  coerce.cpp  coerce.hpp  coerce.mw  exceptions.cpp  index.hpp  index.mw  json.cpp  logging.cpp  nullable.cpp  settings.cpp  settings.hpp  settings.mw  string.cpp  string.hpp  string.mw  threading.cpp
Docs/fost-schema/: index.mw
Examples/: CMakeLists.txt  Jamfile  README.md  readme.txt
Examples/BeerCamp/: CMakeLists.txt  is_prime-fast.cpp  is_prime-slow.cpp  primes-multi.cpp  primes-single.cpp  primes.py
Examples/BeerCamp/Primes/: Jamfile  primes-multi.cpp  primes-single.cpp  primes.cpp  primes.py
Examples/FizzBuzz/: CMakeLists.txt  Jamfile  main.cpp
Examples/Hello/: CMakeLists.txt  Jamfile  main.cpp  nobanner.ini  nobanner.json
Examples/Project Euler/014/: Jamfile  main.cpp  main.py
Examples/fhost/: Jamfile  main.cpp
Examples/fprettyjson/: CMakeLists.txt  Jamfile  fprettyjson.cpp
Examples/ftest/: ftest.cpp
Examples/hash/: CMakeLists.txt  Jamfile  hash.cpp
Examples/host/: Jamfile  host-main.cpp
Examples/http/: Jamfile  fget.cpp  simple.cpp
crypto++/: Jamroot
crypto++/crypto++/: Jamfile
debian/: packages.json
fost-base/: COPYRIGHT  ChangeLog  Jamroot  README.karmic.txt  README.txt  README.ubuntu.txt  compile  fost-base.vcproj  fost.jam
fost-base/Cpp/fost-cli/: Jamfile  arguments.cpp  fost-cli.hpp  inifile.cpp  logger-stdio.cpp  main_exec.cpp  progress-bar-tests.cpp  progress-bar.cpp
fost-base/Cpp/fost-core/: Jamfile  char-encoding-tests.cpp  coerce-linux.cpp  coerce.cpp  date.cpp  datetime-strings.cpp  dynlib-linux.cpp  dynlib-win.cpp  exception.cpp  file-tests.cpp  file.cpp  (+47 more)
fost-base/Cpp/fost-core-test/: file-io.cpp  fost-core-test.hpp  thread.cpp  workerpool.cpp
fost-base/Docs/: Jamfile
fost-base/Examples/: readme.txt
(+170 files in other folders)
